--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "html-webpack-plugin": "^5.3.2",
     "image-webpack-loader": "^7.0.1",
     "style-loader": "^3.3.0",
+    "svg-url-loader": "^7.1.1",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.2.1"
