--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^6.3.0",
     "html-webpack-plugin": "^5.3.2",
     "image-webpack-loader": "^7.0.1",
+    "react-svg-loader": "^3.0.3",
     "style-loader": "^3.3.0",
     "svg-url-loader": "^7.1.1",
     "webpack": "^5.53.0",
